Cleaned up remaining lingering outline styling after confirming it wasnt going to be used, and fixed sticky hovering issues on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,6 @@ html {
   justify-items: stretch;
   height: calc(var(--default-height)*var(--top-proportion-of-height));
   gap: .3125rem;
-  outline-offset: -.35rem;
   font-size:2.5rem;
 }
 
@@ -147,7 +146,6 @@ p{
   
   height: calc(var(--default-height)*var(--top-proportion-of-height));
   gap: .125rem;
-  outline-offset: -.75rem;
   font-size:1.125rem;
   
   justify-content: center;
@@ -466,12 +464,10 @@ but for now I would rather just define the font size in fewer locations for less
   .Main-Flex-Parent{
     height: calc(var(--default-height)*var(--top-proportion-of-height-phone));
     font-size:1.1rem;
-    outline-offset: -.25rem;
 
   }
   .About-Flex-Parent{
     height: calc(var(--default-height)*var(--top-proportion-of-height-phone));
-    outline-offset: -.25rem;
   }
   
   .About-Text{    
@@ -520,4 +516,10 @@ but for now I would rather just define the font size in fewer locations for less
     line-height: 1.4rem;
   }
 
+}
+
+@media (hover: none) {
+  .Hover-Mobile-Adjustment > .Hover-Color:hover {
+     color: red;
+  }
 }
